--- a/clusters/main/kubernetes/apps/etesync/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync/app/helm-release.yaml
@@ -100,6 +100,9 @@ spec:
           - name: app
             type: restic
             credentials: s3
+            dest:
+              volumeSnapshotClassName: ceph-filesystem
+              enabled: true            
             src:
               volumeSnapshotClassName: ceph-filesystem
               enabled: true
@@ -114,6 +117,9 @@ spec:
           - name: secret
             type: restic
             credentials: s3
+            dest:
+              volumeSnapshotClassName: ceph-filesystem
+              enabled: true            
             src:
               volumeSnapshotClassName: ceph-filesystem
               enabled: true
@@ -133,6 +139,9 @@ spec:
           - name: dav-data
             type: restic
             credentials: s3
+            dest:
+              volumeSnapshotClassName: ceph-filesystem
+              enabled: true            
             src:
               volumeSnapshotClassName: ceph-filesystem
               enabled: true
