Disable CNPG backups for rocket-life (will enable after S3 config)

--- a/clusters/main/kubernetes/apps/rocket-life/app/quote-engine-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life/app/quote-engine-helm-release.yaml
@@ -70,15 +70,7 @@ spec:
         user: rocketuser
         mode: standalone
         backups:
-          enabled: true
-          credentials: s3
-          scheduledBackups:
-            - name: daily-backup
-              schedule: "0 0 0 * * *"
-              backupOwnerReference: self
-              immediate: true
-              suspend: false
-          retentionPolicy: "7d"
+          enabled: false  # Disabled - enable after configuring S3 credentials
 
     workload:
       main:
