--- a/clusters/main/kubernetes/apps/rocket-life/app/landing-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life/app/landing-helm-release.yaml
@@ -42,7 +42,7 @@ spec:
         memory: 256Mi
 
     image:
-      repository: docker-registry.registry.svc.cluster.local:5000/rocket-life/landing
+      repository: 192.168.2.207:30500/rocket-life/landing
       tag: latest
       pullPolicy: Always
 
