--- a/clusters/main/kubernetes/apps/rocket-life/app/quote-engine-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life/app/quote-engine-helm-release.yaml
@@ -42,7 +42,7 @@ spec:
         memory: 512Mi
 
     image:
-      repository: docker-registry.registry.svc.cluster.local:5000/rocket-life/quote-engine
+      repository: 192.168.2.207:30500/rocket-life/quote-engine
       tag: latest
       pullPolicy: Always
 
