--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -20,5 +20,5 @@ resources:
   # - rdgen/ks.yaml
   - filebrowser/ks.yaml
   - etesync/ks.yaml
-  - rocket-life/ks.yaml
+  # - rocket-life/ks.yaml
   - registry/ks.yaml
