--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -69,6 +69,9 @@ spec:
           - name: prf
             type: restic
             credentials: s3
+            dest:
+              volumeSnapshotClassName: ceph-filesystem
+              enabled: true
             src:
               volumeSnapshotClassName: ceph-filesystem
               enabled: true
@@ -83,6 +86,9 @@ spec:
           - name: thn
             type: restic
             credentials: s3
+            dest:
+              volumeSnapshotClassName: ceph-filesystem
+              enabled: true
             src:
               volumeSnapshotClassName: ceph-filesystem
               enabled: true
