--- a/clusters/main/kubernetes/apps/rocket-life/ks.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life/ks.yaml
@@ -1,12 +1,38 @@
+---
+# Dev environment
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: rocket-life
+  name: rocket-life-dev
   namespace: flux-system
 spec:
   interval: 10m
-  path: clusters/main/kubernetes/apps/rocket-life/app
+  path: clusters/main/kubernetes/apps/rocket-life/dev
   prune: true
   sourceRef:
     kind: GitRepository
     name: cluster
+  wait: true
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
+---
+# Production environment
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: rocket-life-prod
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: clusters/main/kubernetes/apps/rocket-life/prod
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: cluster
+  wait: true
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-config
