--- a/clusters/main/kubernetes/apps/rocket-life/prod/quote-engine-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life/prod/quote-engine-helm-release.yaml
@@ -98,7 +98,7 @@ spec:
                     name: cnpg-main-urls
                     key: std
                 OPENAI_API_KEY: "${ROCKET_OPENAI_API_KEY}"
-                OPENAI_MODEL: "${ROCKET_OPENAI_MODEL}"
+                OPENAI_MODEL: "gpt-5.1"
                 SUPABASE_URL: "${ROCKET_PROD_SUPABASE_URL}"
                 SUPABASE_ANON_KEY: "${ROCKET_PROD_SUPABASE_ANON_KEY}"
                 SUPABASE_JWT_SECRET: "${ROCKET_PROD_SUPABASE_JWT_SECRET}"
