--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -20,5 +20,6 @@ resources:
   # - rdgen/ks.yaml
   - filebrowser/ks.yaml
   - etesync/ks.yaml
-  # - rocket-life/ks.yaml
   - registry/ks.yaml
+  - rocket-life-dev/ks.yaml
+  - rocket-life-prod/ks.yaml
