--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -21,5 +21,5 @@ resources:
   - filebrowser/ks.yaml
   - etesync/ks.yaml
   - registry/ks.yaml
-  # - rocket-life-dev/ks.yaml
+  - rocket-life-dev/ks.yaml
   - rocket-life-prod/ks.yaml
