--- a/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
@@ -60,6 +60,7 @@ spec:
     persistence:
       data:
         enabled: true
+        mountPath: /data
         storageClass: ceph-filesystem
         size: 1Gi
         accessModes:
