--- a/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
@@ -84,4 +84,4 @@ spec:
             main:
               env:
                 ETESYNC_SERVER_URL: "https://etesync.${DOMAIN_1}"
-                ETESYNC_URL: "${ETESYNCDAV_IP}"      
+                ETESYNC_ALLOWED_HOSTS: "${ETESYNCDAV_IP}"      
