--- a/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
@@ -83,5 +83,5 @@ spec:
           containers:
             main:
               env:
-                ETESYNC_URL: "https://etesync.${DOMAIN_1}"
+                ETESYNC_URL: "http://etesync.etesync.svc.cluster.local:10254"
                 ETESYNC_LISTEN_ADDRESS: "${ETESYNCDAV_IP}"      
