--- a/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
@@ -94,4 +94,4 @@ spec:
             main:
               env:
                 ETESYNC_URL: "http://etesync.etesync.svc.cluster.local:10254"
-                ETESYNC_LISTEN_ADDRESS: "${ETESYNCDAV_IP}"      
+                ETESYNC_LISTEN_ADDRESS: "${ETESYNCDAV_IP},etesync-dav.${DOMAIN_1}"      
