--- a/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync-dav/app/helm-release.yaml
@@ -106,7 +106,7 @@ spec:
                   mkdir -p /tmp/etesync_dav
                   cp -r /usr/local/lib/python3.10/site-packages/etesync_dav /tmp/
                   sed -i 's/app.config\["TRUSTED_HOSTS"\] = LISTEN_ADDRESS/app.config["TRUSTED_HOSTS"] = None/' /tmp/etesync_dav/webui.py
-                  export PYTHONPATH="/tmp:${PYTHONPATH}"
                   exec etesync-dav
               env:
-                ETESYNC_URL: "http://etesync.etesync.svc.cluster.local:10254"      
+                ETESYNC_URL: "http://etesync.etesync.svc.cluster.local:10254"
+                PYTHONPATH: "/tmp"      
