--- a/clusters/main/kubernetes/apps/filebrowser/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/filebrowser/app/helm-release.yaml
@@ -47,6 +47,7 @@ spec:
         ingressClassName: external
         hosts:
           - host: files.${DOMAIN_1}
+          - host: test1.${DOMAIN_1}
         integrations:
           certManager:
             enabled: true
