--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -18,9 +18,9 @@ resources:
   - joplin/ks.yaml  
   # - authentik/ks.yaml
   # - rdgen/ks.yaml
-  # - filebrowser/ks.yaml
+  - filebrowser/ks.yaml
   - etesync/ks.yaml
-  # - registry/ks.yaml
-  # - rocket-life-dev/ks.yaml
+  - registry/ks.yaml
+  - rocket-life-dev/ks.yaml
   # - rocket-life-prod/ks.yaml
   - etesync-dav/ks.yaml
