--- a/clusters/main/kubernetes/apps/dockerregistry/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/dockerregistry/app/helm-release.yaml
@@ -36,6 +36,7 @@ spec:
     TZ: America/Chicago
     service:
       main:
+        enabled: true
         type: LoadBalancer
         loadBalancerIP: ${REGISTRY_IP}
         integrations:
@@ -43,6 +44,7 @@ spec:
             enabled: true
         ports:
           main:
+            enabled: true
             port: 5000
             protocol: tcp
             targetPort: 5000    
