--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -23,4 +23,4 @@ resources:
   # - rocket-life-dev/ks.yaml
   # - rocket-life-prod/ks.yaml
   - etesync-dav/ks.yaml
-  # - dockerregistry/ks.yaml
+  - dockerregistry/ks.yaml
