--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -21,6 +21,6 @@ resources:
   - filebrowser/ks.yaml
   - etesync/ks.yaml
   - rocket-life-dev/ks.yaml
-  - rocket-life-prod/ks.yaml
+  # - rocket-life-prod/ks.yaml
   - etesync-dav/ks.yaml
   - dockerregistry/ks.yaml
