--- a/clusters/main/kubernetes/apps/etesync/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/etesync/app/helm-release.yaml
@@ -33,6 +33,11 @@ spec:
     global:
       stopAll: false
 
+    # operator:
+    #   verify:
+    #     redis:
+    #       enabled: false
+
     TZ: America/Chicago
 
     credentials:
