--- a/clusters/main/kubernetes/apps/rocket-life-prod/app/landing-helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rocket-life-prod/app/landing-helm-release.yaml
@@ -42,7 +42,7 @@ spec:
         memory: 256Mi
 
     image:
-      repository: docker.${DOMAIN_1}/rocket-life/landing
+      repository: dockerregistry.dockerregistry.svc.cluster.local:5000/rocket-life/landing
       tag: prod
       pullPolicy: Always
 
