--- a/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
@@ -96,13 +96,13 @@ spec:
         type: device
         hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0001-if00-port0              
 
-    workload:
-      main:
-        # type: Deployment
-        # strategy: RollingUpdate #ToDo install a second zigbee dongle 
-        # replicas: 2      
-        podSpec:
-          nodeSelector:
-            feature.node.kubernetes.io/usb-ff_10c4_ea60.present: "true"
+    # workload:
+    #   main:
+    #     # type: Deployment
+    #     # strategy: RollingUpdate #ToDo install a second zigbee dongle 
+    #     # replicas: 2      
+    #     podSpec:
+    #       nodeSelector:
+    #         feature.node.kubernetes.io/usb-ff_10c4_ea60.present: "true"
             
          
