--- a/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
@@ -73,6 +73,8 @@ spec:
       trusted_proxies:
       - 172.16.0.0/16
       - 172.17.0.0/16
+      postgresql:
+        enabled: true
     persistence:
       config:
         storageClass: ceph-filesystem
