--- a/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
@@ -29,6 +29,12 @@ spec:
   uninstall:
     keepHistory: false
   values:
+  
+    image:
+      repository: docker.io/homeassistant/home-assistant
+      pullPolicy: IfNotPresent
+      tag: 2025.11.3@sha256:f971850a6ec1fb5c5fd4e1748058e9e1f589aaf0da933b8d88bb5dee03f5b5e8
+
     ## Enable host networking for direct network access. True breaks K8s security.
     # hostNetwork: true
     TZ: America/Chicago 
