--- a/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
   uninstall:
     keepHistory: false
   values:
-  
+
     image:
       repository: docker.io/homeassistant/home-assistant
       pullPolicy: IfNotPresent
@@ -97,35 +97,18 @@ spec:
               enabled: true
               trigger:
                 schedule: "30 14 * * *"
-      init:
-        storageClass: ceph-filesystem
-        size: 1Gi
-        accessModes:
-          - ReadWriteMany        
-        volsync:
-          - name: b2-init
-            type: restic
-            credentials: s3
-            dest:
-              volumeSnapshotClassName: ceph-filesystem
-              enabled: true
-            src:
-              volumeSnapshotClassName: ceph-filesystem 
-              enabled: true
-              trigger:
-                schedule: "30 14 * * *"                       
-      zigbeedongle:
-        enabled: true
-        type: device
-        hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0001-if00-port0              
+    #   zigbeedongle:
+    #     enabled: true
+    #     type: device
+    #     hostPath: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0001-if00-port0              
 
-    workload:
-      main:
-        # type: Deployment
-        # strategy: RollingUpdate #ToDo install a second zigbee dongle 
-        # replicas: 2      
-        podSpec:
-          nodeSelector:
-            feature.node.kubernetes.io/usb-ff_10c4_ea60.present: "true"
+    # workload:
+    #   main:
+    #     # type: Deployment
+    #     # strategy: RollingUpdate #ToDo install a second zigbee dongle 
+    #     # replicas: 2      
+    #     podSpec:
+    #       nodeSelector:
+    #         feature.node.kubernetes.io/usb-ff_10c4_ea60.present: "true"
             
          
