--- a/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/hass/app/helm-release.yaml
@@ -99,7 +99,7 @@ spec:
                 schedule: "30 14 * * *"
     cnpg:
       main:
-        # mode: recovery # Set to 'recovery' when recovery from S3, also change the revisions
+        mode: recovery # Set to 'recovery' when recovery from S3, also change the revisions
         backups:
           enabled: true
           credentials: s3
@@ -108,7 +108,7 @@ spec:
         recovery:
           credentials: s3
           revision: ""  
-                        
+
     #   zigbeedongle:
     #     enabled: true
     #     type: device
